--- a/Zadanie 4.tex
+++ b/Zadanie 4.tex
@@ -73,7 +73,7 @@ Zadanie 4 Poligrafia
 \vspace{5cm}
 \begin{center}
 {\large
-Marcin Krogulewski
+Marcin Krogulewski i Aleksandra Janik
 }\par\vspace{0.2cm}\par
 {\LARGE
 Moje Ulubione Sporty
